# vox-arena

./: .gitignore  README.md  build_package.py  claude.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: deploy-docs.yml  publish.yml
docs/: index.html
script/: utterances.yaml
spec/: 01-goals-and-principles.md  02-architecture-and-contracts.md  03-agent-and-evaluation.md  04-phases.md  05-rules.md  06-ui-control-panel.md  README.md
src/: agent.py  config.py  database.py  evaluator.py  generate_audio.py  harness.py  main.py  manifest.py  report_generator.py  tools.py
src/data/: hours.json  menu.json  system_prompt.txt
src/providers/: base.py  gemini.py  openai.py
ui/: package-lock.json
ui/src/: App.css  App.jsx  index.css
ui/src/components/: AudioPlayer.jsx  AudioWaveformVisualizer.jsx  LivePipelineVisualizer.jsx  MetricComparison.jsx  SummaryStat.jsx
ui/src/components/modals/: AddUtteranceModal.jsx  ConfirmModal.jsx  CreateTemplateModal.jsx  EditTemplateModal.jsx  NewRunModal.jsx
ui/src/components/tabs/: DashboardTab.jsx  RunsTab.jsx  SettingsTab.jsx
ui/src/hooks/: useBackendConfig.js  useRuns.js  useTemplates.js
voxarena/: agent.py  cli.py  config.py  database.py  evaluator.py  generate_audio.py  harness.py  main.py  manifest.py  runner.py  templates.py  tools.py
voxarena/providers/: base.py
