[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxarena"
version = "0.1.15"
description = "An evaluation arena for realtime voice agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "VoxArena contributors" }]
keywords = [
    "voice-agents",
    "realtime-llm",
    "evaluation",
    "benchmarking",
    "gemini-live",
    "openai-realtime",
    "pipecat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pipecat-ai[openai,google]>=0.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
voxarena = "voxarena.cli:main"

[project.urls]
Homepage = "https://github.com/simkeyur/vox-arena"
Issues = "https://github.com/simkeyur/vox-arena/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxarena*"]

[tool.setuptools.package-data]
voxarena = ["ui_dist/**/*", "default_script/**/*"]

